--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ itertools = "0.10"
 chrono = "0.4"
 enumset = "1.1"
 clap = { version = "4.3", features = ["derive"] }
+uuid = { version = "1.3", features = ["v1"] }
