--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ nom = "7.1"
 itertools = "0.10"
 chrono = "0.4"
 enumset = "1.1"
-clap = { version = "4.3", features = ["derive"] }
+argh = "0.1"
 uuid = { version = "1.3", features = ["v1"] }
