Cargo.toml: Add a release config for a smaller binary
Signed-off-by: Jeremy Kerr <jk@codeconstruct.com.au>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ enumset = "1.1"
 argh = "0.1"
 uuid = { version = "1.3", features = ["v1"] }
 anyhow = "1.0"
+
+[profile.release]
+strip = true
+lto = true
+opt-level = "s"
+panic = "abort"
